tests/snapshots/snapshots/snapshots__snapshots__json_output__search_no_match_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: SnapshotJson(&normalize_json(&json))
---
{
  "issues": [],
  "total": 0,
  "limit": 50,
  "offset": 0,
  "has_more": false,
  "hidden_closed_count": 0
}
