tests/snapshots/snapshots/snapshots__snapshots__json_output__show_multiple_ids_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: SnapshotJson(&normalized)
---
[
  {
    "id": "ISSUE_ID",
    "verify": "br list",
    "principles": [
      {
        "name": "prove-it-works",
        "decision": "e2e seed; harness-supplied citation, because br create is fail-closed at P<=2"
      }
    ],
    "ac_shape": "checkable",
    "blast": "normal",
    "deliverable": "diff",
    "revision": 1,
    "title": "First detailed issue",
    "description": "e2e seed: harness-supplied brief, because br create is fail-closed",
    "status": "open",
    "priority": 2,
    "issue_type": "task",
    "created_at": "TIMESTAMP",
    "created_by": "ACTOR",
    "updated_at": "TIMESTAMP",
    "source_repo": "SOURCE_REPO",
    "source_repo_path": "SOURCE_REPO",
    "compaction_level": 0,
    "original_size": 0
  },
  {
    "id": "ISSUE_ID",
    "verify": "br list",
    "principles": [
      {
        "name": "prove-it-works",
        "decision": "e2e seed; harness-supplied citation, because br create is fail-closed at P<=2"
      }
    ],
    "ac_shape": "checkable",
    "blast": "normal",
    "deliverable": "diff",
    "revision": 1,
    "title": "Second detailed issue",
    "description": "e2e seed: harness-supplied brief, because br create is fail-closed",
    "status": "open",
    "priority": 2,
    "issue_type": "task",
    "created_at": "TIMESTAMP",
    "created_by": "ACTOR",
    "updated_at": "TIMESTAMP",
    "source_repo": "SOURCE_REPO",
    "source_repo_path": "SOURCE_REPO",
    "compaction_level": 0,
    "original_size": 0
  }
]
