tests/snapshots/snapshots/snapshots__snapshots__json_output__update_json_output.snap
---
source: tests/snapshots/json_output.rs
assertion_line: 265
expression: SnapshotJson(&normalize_json(&json))
---
{
  "id": "ISSUE_ID",
  "title": "Issue to update",
  "status": "in_progress",
  "priority": 2,
  "assignee": null,
  "owner": null,
  "updated_at": "TIMESTAMP"
}
